# eonlet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFESTO.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
agents/: README.md
agents/assistant/: agent.yaml  system.md
agents/portfolio/: README.md  agent.yaml  target_allocation.md.example
agents/portfolio/skills/: fundamental_analysis.md  technical_analysis.md
agents/portfolio/tools/: market_data.py  news_scan.py  portfolio_read.py
agents/x-digest/: README.md  agent.yaml  system.md
agents/x-digest/tools/: x_timeline.py
docs/: AGENT_CONFIG_SPEC.md  CLI_REFERENCE.md  DIRECTORY_LAYOUT.md  INDEX.md  MANUAL_TEST_SCENARIOS.md  MEMORY_SPEC.md  SECURITY.md  SPEC.md  TEST_PLAN.md  TOOL_SPEC.md  TRIGGER_SPEC.md
docs/adr/: 0001-no-supervisor-mvp.md  0002-dynamic-triggers.md  0003-memory-system.md  0004-web-tools.md
docs/concepts/: teams-and-organizations.md
docs/plans/: web-tools.md
src/eonlet/: README.md  __init__.py  config.py  errors.py  paths.py
src/eonlet/cli/: commands.py  main.py  status.py  util.py
src/eonlet/llm/: __init__.py  anthropic_provider.py  factory.py  fake_provider.py  openai_provider.py  protocol.py
src/eonlet/memory/: __init__.py  compactor.py  config.py  ids.py  injection.py  ltm.py  migrate.py  notes.py  paths.py  recall.py  stm.py  storage.py  tier1.py  tier2.py  tier3.py  todos.py  tokens.py  watermark.py
src/eonlet/permissions/: __init__.py  gate.py
src/eonlet/runtime/: __init__.py  agent.py  definition.py  events.py  state.py  store.py
src/eonlet/templates/: config.yaml
src/eonlet/templates/assistant/: README.md  agent.yaml  system.md
src/eonlet/templates/portfolio/: .env.example  agent.yaml  system.md  watchlist.md.example
src/eonlet/templates/portfolio/tools/: market_data.py  news_scan.py  portfolio_read.py
src/eonlet/templates/x-digest/: .env.example  agent.yaml
src/eonlet/templates/x-digest/prompts/: digest_template.md
src/eonlet/templates/x-digest/tools/: x_timeline.py
src/eonlet/tools/: __init__.py  protocol.py  registry.py
src/eonlet/tools/builtin/: __init__.py  bash.py  email.py  files.py  forget.py  memory.py  note.py  notes.py  recall.py  remember.py  schedule.py  skill_tool.py  sleep_tool.py  todo.py  web.py
src/eonlet/triggers/: __init__.py  dynamic_store.py  scheduler.py
src/eonlet/worker/: __init__.py  ipc.py  lifecycle.py  main.py
tests/: conftest.py
tests/integration/: test_worker_inprocess.py  test_worker_subprocess.py
tests/unit/: test_cli_commands_extra.py  test_cli_offline.py  test_cli_runner.py  test_definition.py  test_dynamic_store.py  test_email.py  test_event_store.py  test_export_import.py  test_fake_provider.py  test_ipc_client.py  test_lifecycle.py  test_permissions.py  test_providers.py  test_replay.py  test_scheduler.py  test_status.py  test_streaming.py  test_tools_builtin.py  test_tools_memory_builtin.py  test_tools_schedule_builtin.py  test_web_tools.py
tests/unit/memory/: test_agent_injection.py  test_compactor.py  test_config.py  test_events.py  test_injection.py  test_ltm.py  test_migrate.py  test_notes_store.py  test_paths.py  test_recall_index.py  test_recall_tool.py  test_remember_forget.py  test_stm.py  test_storage.py  test_tier1.py  test_tier2.py  test_tier3.py  test_todos_store.py  test_tools_note_todo.py  test_watermark.py
